@@ -533,13 +533,14 @@ class CAction extends CZBXAPI {
 		$duplicates = array();
 		foreach ($actions as $action) {
 			if (!check_db_fields($actionDbFields, $action)) {
-				self::exception(ZBX_API_ERROR_PARAMETERS, _s('Incorrect parameter for action "%s".', $action['name']));
+				self::exception(ZBX_API_ERROR_PARAMETERS,
+					_s('Incorrect parameter for action "%1$s".', $action['name']));
 			}
 			if (isset($action['esc_period']) && $action['esc_period'] < SEC_PER_MIN && $action['eventsource'] == EVENT_SOURCE_TRIGGERS) {
 				self::exception(ZBX_API_ERROR_PARAMETERS, _s('Action "%1$s" has incorrect value for "esc_period" (minimum %2$s seconds).', $action['name'], SEC_PER_MIN));
 			}
 			if (isset($duplicates[$action['name']])) {
-				self::exception(ZBX_API_ERROR_PARAMETERS, _s('Action "%s" already exists.', $action['name']));
+				self::exception(ZBX_API_ERROR_PARAMETERS, _s('Action "%1$s" already exists.', $action['name']));
 			}
 			else {
 				$duplicates[$action['name']] = $action['name'];
@@ -553,22 +554,38 @@ class CAction extends CZBXAPI {
 			'nopermissions' => true
 		));
 		foreach ($dbActions as $dbAction) {
-			self::exception(ZBX_API_ERROR_PARAMETERS, _s('Action "%s" already exists.', $dbAction['name']));
+			self::exception(ZBX_API_ERROR_PARAMETERS, _s('Action "%1$s" already exists.', $dbAction['name']));
 		}
 
 		$actionids = DB::insert('actions', $actions);
 
 		$conditions = $operations = array();
 		foreach ($actions as $anum => $action) {
-			if (isset($action['conditions']) && !empty($action['conditions'])) {
+			// conditions are optional, but when set, its fields must be validated
+			if (isset($action['conditions'])) {
+				if (!is_array($action['conditions'])) {
+					self::exception(ZBX_API_ERROR_PARAMETERS,
+						_s('Incorrect action conditions for action "%1$s".', $action['name']));
+				}
+
 				foreach ($action['conditions'] as $condition) {
+					if (!isset($condition['conditiontype'])) {
+						self::exception(ZBX_API_ERROR_PARAMETERS,
+							_s('Missing "%1$s" field for action condition.', 'conditiontype'));
+					}
+
+					$condition['operator'] = isset($condition['operator'])
+						? $condition['operator']
+						: CONDITION_OPERATOR_EQUAL;
+
 					$condition['actionid'] = $actionids[$anum];
 					$conditions[] = $condition;
 				}
 			}
 
 			if (!isset($action['operations']) || empty($action['operations'])) {
-				self::exception(ZBX_API_ERROR_PARAMETERS, _s('Incorrect parameter for action "%s".', $action['name']));
+				self::exception(ZBX_API_ERROR_PARAMETERS,
+					_s('Incorrect parameter for action "%1$s".', $action['name']));
 			}
 			else {
 				foreach ($action['operations'] as $operation) {
@@ -614,9 +631,11 @@ class CAction extends CZBXAPI {
 			'selectOperations' => API_OUTPUT_EXTEND,
 			'selectConditions' => API_OUTPUT_EXTEND
 		));
-			foreach ($actions as $action) {
+
+		foreach ($actions as $action) {
 			if (isset($action['actionid']) && !isset($updActions[$action['actionid']])) {
-				self::exception(ZBX_API_ERROR_PERMISSIONS, _('No permissions to referred object or it does not exist!'));
+				self::exception(ZBX_API_ERROR_PERMISSIONS,
+					_('No permissions to referred object or it does not exist!'));
 			}
 		}
 
@@ -660,15 +679,22 @@ class CAction extends CZBXAPI {
 					'nopermissions' => true,
 					'preservekeys' => true
 				));
-				if (($actionExist = reset($actionExists)) && (bccomp($actionExist['actionid'], $action['actionid']) != 0)) {
-					self::exception(ZBX_API_ERROR_PARAMETERS, _s('Action "%s" already exists.', $action['name']));
+				if (($actionExist = reset($actionExists))
+						&& (bccomp($actionExist['actionid'], $action['actionid']) != 0)) {
+					self::exception(ZBX_API_ERROR_PARAMETERS, _s('Action "%1$s" already exists.', $action['name']));
 				}
 			}
 
 			if (isset($action['conditions'])) {
-				$conditionsDb = isset($updActions[$action['actionid']]['conditions']) ? $updActions[$action['actionid']]['conditions'] : array();
+				if (!is_array($action['conditions'])) {
+					self::exception(ZBX_API_ERROR_PARAMETERS,
+						_s('Incorrect action conditions for action "%1$s".', $updActions[$action['actionid']]['name']));
+				}
+
+				$conditionsDb = isset($updActions[$action['actionid']]['conditions'])
+					? $updActions[$action['actionid']]['conditions']
+					: array();
 				$conditionsDb = zbx_toHash($conditionsDb, 'conditionid');
-				self::validateConditions($action['conditions']);
 
 				foreach ($action['conditions'] as $condition) {
 					$condition['actionid'] = $action['actionid'];
@@ -677,6 +703,14 @@ class CAction extends CZBXAPI {
 						$conditionsCreate[] = $condition;
 					}
 					elseif (isset($conditionsDb[$condition['conditionid']])) {
+						// value and operator validation depends on condition type
+						$defaultFields = array('conditiontype', 'operator', 'value');
+						foreach ($defaultFields as $field) {
+							$condition[$field] = isset($condition[$field])
+								? $condition[$field]
+								: $conditionsDb[$condition['conditionid']][$field];
+						}
+
 						$conditionsUpdate[] = $condition;
 						unset($conditionsDb[$condition['conditionid']]);
 					}
@@ -689,7 +723,7 @@ class CAction extends CZBXAPI {
 			}
 
 			if (isset($action['operations']) && empty($action['operations'])) {
-				self::exception(ZBX_API_ERROR_PARAMETERS, _s('Action "%s" no operations defined.', $action['name']));
+				self::exception(ZBX_API_ERROR_PARAMETERS, _s('Action "%1$s" no operations defined.', $action['name']));
 			}
 			elseif (isset($action['operations'])) {
 				$this->validateOperations($action['operations']);
@@ -725,8 +759,12 @@ class CAction extends CZBXAPI {
 
 		DB::update('actions', $update);
 
+		self::validateConditions($conditionsCreate);
 		$this->addConditions($conditionsCreate);
+
+		self::validateConditions($conditionsUpdate, true);
 		$this->updateConditions($conditionsUpdate);
+
 		if (!empty($conditionidsDelete)) {
 			$this->deleteConditions($conditionidsDelete);
 		}
@@ -1405,7 +1443,7 @@ class CAction extends CZBXAPI {
 	 *
 	 * @return bool
 	 */
-	public static function validateConditions($conditions) {
+	public static function validateConditions($conditions, $update = false) {
 		$conditions = zbx_toArray($conditions);
 
 		$hostGroupIdsAll = array();
@@ -1416,93 +1454,195 @@ class CAction extends CZBXAPI {
 		$proxyIdsAll = array();
 		$proxyidsAll = array();
 
-		$discoveryCheckTypes = discovery_check_type2str();
-		$discoveryObjectStatuses = discovery_object_status2str();
+		// build validators
 		$timePeriodValidator = new CTimePeriodValidator();
+		$discoveryCheckTypeValidator = new CSetValidator(array(
+			'values' => array_keys(discovery_check_type2str())
+		));
+		$discoveryObjectStatusValidator = new CSetValidator(array(
+			'values' => array_keys(discovery_object_status2str())
+		));
+		$triggerSeverityValidator = new CSetValidator(array(
+			'values' => array_keys(getSeverityCaption())
+		));
+		$discoveryObjectValidator = new CSetValidator(array(
+			'values' => array_keys(discovery_object2str())
+		));
+		$triggerValueValidator = new CSetValidator(array(
+			'values' => array_keys(trigger_value2str())
+		));
+		$eventTypeValidator = new CSetValidator(array(
+			'values' => array_keys(eventType())
+		));
 
 		foreach ($conditions as $condition) {
-			switch ($condition['conditiontype']) {
-				case CONDITION_TYPE_HOST_GROUP:
-					$hostGroupIdsAll[$condition['value']] = $condition['value'];
+			// on create operator is mandatory and needs validation, but on update it must be validated only if it's set
+			if (!$update || ($update && isset($condition['operator']))) {
+				$operatorValidator = new CSetValidator(array(
+					'values' => get_operators_by_conditiontype($condition['conditiontype'])
+				));
+				if (!$operatorValidator->validate($condition['operator'])) {
+					self::exception(ZBX_API_ERROR_PARAMETERS, _('Incorrect action condition operator.'));
+				}
+			}
+
+			if (!$update || ($update && isset($condition['value']))) {
+				// validate condition values depending on condition type
+				switch ($condition['conditiontype']) {
+					case CONDITION_TYPE_HOST_GROUP:
+						if (!$condition['value']) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						$hostGroupIdsAll[$condition['value']] = $condition['value'];
+						break;
+
+					case CONDITION_TYPE_TEMPLATE:
+						if (!$condition['value']) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						$templateIdsAll[$condition['value']] = $condition['value'];
+						break;
+
+					case CONDITION_TYPE_TRIGGER:
+						if (!$condition['value']) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						$triggerIdsAll[$condition['value']] = $condition['value'];
+						break;
+
+					case CONDITION_TYPE_HOST:
+						if (!$condition['value']) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						$hostIdsAll[$condition['value']] = $condition['value'];
+						break;
+
+					case CONDITION_TYPE_DRULE:
+						if (!$condition['value']) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						$discoveryRuleIdsAll[$condition['value']] = $condition['value'];
+						break;
+
+					case CONDITION_TYPE_DCHECK:
+						if (!$condition['value']) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						$proxyIdsAll[$condition['value']] = $condition['value'];
+						break;
+
+					case CONDITION_TYPE_PROXY:
+						if (!$condition['value']) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						$proxyidsAll[$condition['value']] = $condition['value'];
+						break;
+
+					case CONDITION_TYPE_DOBJECT:
+						if (zbx_empty($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						elseif (!$discoveryObjectValidator->validate($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS,
+								_('Incorrect action condition discovery object.'));
+						}
+						break;
+
+					case CONDITION_TYPE_TIME_PERIOD:
+						if (!$timePeriodValidator->validate($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, $timePeriodValidator->getError());
+						}
+						break;
+
+					case CONDITION_TYPE_DHOST_IP:
+						if (zbx_empty($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						else if (!validate_ip_range($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS,
+								_s('Incorrect action condition ip "%1$s".', $condition['value']));
+						}
+						break;
+
+					case CONDITION_TYPE_DSERVICE_TYPE:
+						if (zbx_empty($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						elseif (!$discoveryCheckTypeValidator->validate($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Incorrect action condition discovery check.'));
+						}
+						break;
+
+					case CONDITION_TYPE_DSERVICE_PORT:
+						if (zbx_empty($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						elseif (!validate_port_list($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS,
+								_s('Incorrect action condition port "%1$s".', $condition['value']));
+						}
+						break;
+
+					case CONDITION_TYPE_DSTATUS:
+						if (zbx_empty($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						elseif (!$discoveryObjectStatusValidator->validate($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS,
+								_('Incorrect action condition discovery status.'));
+						}
+						break;
+
+					case CONDITION_TYPE_MAINTENANCE:
+						if (!zbx_empty($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Maintenance action condition value must be empty.'));
+						}
+						break;
+
+					case CONDITION_TYPE_TRIGGER_SEVERITY:
+						if (zbx_empty($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						elseif (!$triggerSeverityValidator->validate($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS,
+								_('Incorrect action condition trigger severity.'));
+						}
+						break;
+
+					case CONDITION_TYPE_TRIGGER_VALUE:
+						if (zbx_empty($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						elseif (!$triggerValueValidator->validate($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Incorrect action condition trigger value.'));
+						}
+						break;
+
+					case CONDITION_TYPE_EVENT_TYPE:
+						if (zbx_empty($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						elseif (!$eventTypeValidator->validate($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Incorrect action condition event type.'));
+						}
 					break;
 
-				case CONDITION_TYPE_TEMPLATE:
-					$templateIdsAll[$condition['value']] = $condition['value'];
-					break;
+					case CONDITION_TYPE_TRIGGER_NAME:
+					case CONDITION_TYPE_NODE:
+					case CONDITION_TYPE_DUPTIME:
+					case CONDITION_TYPE_DVALUE:
+					case CONDITION_TYPE_APPLICATION:
+					case CONDITION_TYPE_HOST_NAME:
+					case CONDITION_TYPE_HOST_METADATA:
+						if (zbx_empty($condition['value'])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
+						}
+						break;
 
-				case CONDITION_TYPE_TRIGGER:
-					$triggerIdsAll[$condition['value']] = $condition['value'];
-					break;
-
-				case CONDITION_TYPE_HOST:
-					$hostIdsAll[$condition['value']] = $condition['value'];
-					break;
-
-				case CONDITION_TYPE_DRULE:
-					$discoveryRuleIdsAll[$condition['value']] = $condition['value'];
-					break;
-
-				case CONDITION_TYPE_DCHECK:
-					$proxyIdsAll[$condition['value']] = $condition['value'];
-					break;
-
-				case CONDITION_TYPE_PROXY:
-					$proxyidsAll[$condition['value']] = $condition['value'];
-					break;
-
-				case CONDITION_TYPE_TIME_PERIOD:
-					if (!$timePeriodValidator->validate($condition['value'])) {
-						self::exception(ZBX_API_ERROR_PARAMETERS, _s('Incorrect action condition period "%s".', $condition['value']));
-					}
-					break;
-
-				case CONDITION_TYPE_DHOST_IP:
-					if (!validate_ip_range($condition['value'])) {
-						self::exception(ZBX_API_ERROR_PARAMETERS, _s('Incorrect action condition ip "%s".', $condition['value']));
-					}
-					break;
-
-				case CONDITION_TYPE_DSERVICE_TYPE:
-					if (!isset($discoveryCheckTypes[$condition['value']])) {
-						self::exception(ZBX_API_ERROR_PARAMETERS, _('Incorrect action condition discovery check.'));
-					}
-					break;
-
-				case CONDITION_TYPE_DSERVICE_PORT:
-					if (!validate_port_list($condition['value'])) {
-						self::exception(ZBX_API_ERROR_PARAMETERS, _s('Incorrect action condition port "%s".', $condition['value']));
-					}
-					break;
-
-				case CONDITION_TYPE_DSTATUS:
-					if (!isset($discoveryObjectStatuses[$condition['value']])) {
-						self::exception(ZBX_API_ERROR_PARAMETERS, _('Incorrect action condition discovery status.'));
-					}
-					break;
-
-				case CONDITION_TYPE_MAINTENANCE:
-					// maintenance condition has no value...
-					break;
-
-				case CONDITION_TYPE_TRIGGER_NAME:
-				case CONDITION_TYPE_TRIGGER_VALUE:
-				case CONDITION_TYPE_TRIGGER_SEVERITY:
-				case CONDITION_TYPE_NODE:
-				case CONDITION_TYPE_DOBJECT:
-				case CONDITION_TYPE_DUPTIME:
-				case CONDITION_TYPE_DVALUE:
-				case CONDITION_TYPE_APPLICATION:
-				case CONDITION_TYPE_HOST_NAME:
-				case CONDITION_TYPE_HOST_METADATA:
-				case CONDITION_TYPE_EVENT_TYPE:
-					if (zbx_empty($condition['value'])) {
-						self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty action condition.'));
-					}
-					break;
-
-				default:
-					self::exception(ZBX_API_ERROR_PARAMETERS, _('Incorrect action condition type.'));
-					break;
+					default:
+						self::exception(ZBX_API_ERROR_PARAMETERS, _('Incorrect action condition type.'));
+						break;
+				}
 			}
 		}
 
